<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nombreTarea"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:text="@string/tarea"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/verde"
        android:drawableRight="@drawable/papelera"
        android:drawableTint="@color/black"
        android:onClick="borrarTarea"
        android:text="@string/done"
        android:fontFamily="@font/cabin"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/verde"
        android:drawableRight="@drawable/editar"
        android:drawableTint="@color/black"
        android:onClick="editarTarea"
        android:text="@string/edit"
        android:fontFamily="@font/cabin"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/doneButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nombreTarea"
        app:layout_constraintTop_toBottomOf="@+id/doneButton" />
</androidx.constraintlayout.widget.ConstraintLayout>